# llm-processing-unit

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
llmpu/: __init__.py  llmpu.py
llmpu/examples/: chat.py
llmpu/formatters/: __init__.py  args.py  base.py  format_alpaca.py  format_llama3.py  format_oaichat.py
llmpu/history/: __init__.py  history.py
llmpu/sessions/: __init__.py  args.py  base.py  oai_compatible.py
